--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,10 @@
           {% endif %}
         </ul>
       </div>
-
+      <div id="world"></div>
+      <script src="./three.min.js"></script>
+      <script src="./OrbitControls.js"></script>
+      <script src="./index.js"></script>
       <div class="footer-col footer-col-3">
         <p>{{ site.description }}</p>
       </div>
