--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,9 +28,9 @@
         </ul>
       </div>
       <div id="world"></div>
-      <script src="./three.min.js"></script>
-      <script src="./OrbitControls.js"></script>
-      <script src="./index.js"></script>
+      <script src="js/three.min.js"></script>
+      <script src="js/OrbitControls.js"></script>
+      <script src="js/index.js"></script>
       <div class="footer-col footer-col-3">
         <p>{{ site.description }}</p>
       </div>
