--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,6 +31,7 @@
       <script src="js/three.min.js"></script>
       <script src="js/OrbitControls.js"></script>
       <script src="js/index.js"></script>
+      <script src="js/canvas-nest.min.js"></script>
       <div class="footer-col footer-col-3">
         <p>{{ site.description }}</p>
       </div>
