--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
         {{ content }}
       </div>
     </div>
+    {% include background.html %}
 
     {% include footer.html %}
-
   </body>
 
 </html>
