--- a/_includes/blog/scripts.html
+++ b/_includes/blog/scripts.html
@@ -116,5 +116,5 @@ $(document).ready(function () {
 <script src="{{ site.baseurl }}/assets/javascripts/three.min.js"></script>
 <script src="{{ site.baseurl }}/assets/javascripts/OrbitControls.js"></script>
 <script src="{{ site.baseurl }}/assets/javascripts/lion.js"></script>
-<script color="41,36,32" opacity="0.7" count="-2"zIndex="100"
-src="{{ site.baseurl }}/assets/javascripts/canvas-nest.min.js"></script>
+<!-- <script color="41,36,32" opacity="0.7" count="-2"zIndex="100"
+src="{{ site.baseurl }}/assets/javascripts/canvas-nest.min.js"></script> -->
