--- a/_includes/blog/overlay.html
+++ b/_includes/blog/overlay.html
@@ -19,3 +19,10 @@
         <ul class="results"></ul>
     </div>
 </div>
+
+<div id="world"></div>
+<script src="{{ site.baseurl }}/assets/javascripts/three.min.js"></script>
+<script src="{{ site.baseurl }}/assets/javascripts/OrbitControls.js"></script>
+<script src="{{ site.baseurl }}/assets/javascripts/lion.js"></script>
+<script color="41,36,32" opacity="0.7" count="-2"zIndex="100"
+src="{{ site.baseurl }}/assets/javascripts/canvas-nest.min.js"></script>
