--- a/_includes/blog/header.html
+++ b/_includes/blog/header.html
@@ -15,6 +15,7 @@
                     <!--[if !IE]> -->
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].search }}" class="btn-search" href="#">{{ site.data.i18n[site.lang].search }}</a></li>
                     <!-- <![endif]-->
+                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].tools }}" href="{{ site.paths.tools | relative_url }}">{{ site.data.i18n[site.lang].tools }}</a></li>
                 </ul>
             </nav>
         </div>
