--- a/_includes/blog/overlay.html
+++ b/_includes/blog/overlay.html
@@ -23,6 +23,6 @@
 <!-- <div id="world"></div>
 <script src="{{ site.baseurl }}/assets/javascripts/three.min.js"></script>
 <script src="{{ site.baseurl }}/assets/javascripts/OrbitControls.js"></script>
-<script src="{{ site.baseurl }}/assets/javascripts/lion.js"></script>
-<script color="41,36,32" opacity="0.7" count="150"zIndex="-2" -->
+<script src="{{ site.baseurl }}/assets/javascripts/lion.js"></script> -->
+<script color="41,36,32" opacity="0.7" count="150"zIndex="-2"
 src="{{ site.baseurl }}/assets/javascripts/canvas-nest.min.js"></script>
