--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@
 <!--<![endif]-->
 
 <head>
-    <link rel="icon" type="image/x-icon" href="{{ "{{ site.baseurl }}/assets/images/simple-icons/clown.ico" }}">
+    <link rel="icon" type="image/x-icon" href='{{ site.baseurl }}/assets/images/simple-icons/clown.ico'>
     {% include common/meta.html %}
     <link href='{{ site.baseurl }}/assets/stylesheets/home.css' rel="stylesheet" type="text/css">
     {% include common/libraries.html %}
